# llmeval

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example.yaml
dashboard/: app.py
data/: sample.jsonl
llmeval/: __init__.py  cli.py  comparison.py  config.py  dataset.py  reporter.py  runner.py
llmeval/connectors/: __init__.py  anthropic_connector.py  base.py  openai_connector.py
llmeval/metrics/: __init__.py  bleu.py  faithfulness.py  llm_judge.py  rouge.py  semantic.py
tests/: test_comparison.py  test_connectors.py  test_metrics.py
